--- a/app/page.module.css
+++ b/app/page.module.css
@@ -61,9 +61,9 @@
   padding: 14px 24px;
   font-size: 20px;
   font-weight: 600;
-  border: none;
+  border: 2px solid rgba(255, 255, 255, 0.3);
   border-radius: 8px;
-  background: #1a1a1a;
+  background: #333;
   color: white;
   margin-top: 20px;
   margin-bottom: 15px;
@@ -193,7 +193,7 @@ a.secondary {
   padding: 20px;
   font-size: 32px;
   font-weight: 400;
-  border: 3px solid #1a1a1a;
+  border: 3px solid rgba(255, 255, 255, 0.3);
   border-radius: 8px;
   background: #229954;
   color: white;
@@ -310,28 +310,6 @@ a.secondary {
   margin: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  .page {
-    --background: #000;
-    --foreground: #000;
-
-    --text-primary: #ededed;
-    --text-secondary: #999;
-
-    --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
-    --button-secondary-border: #1a1a1a;
-
-
-
-  }
-
-  .notes textarea {
-    background: #1a1a1a;
-    color: var(--text-primary);
-    border-color: var(--button-secondary-border);
-  }
-}
 
 
 .liveTracker {
